# proxmox_templates

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES_v1.1.2.md  images.json
docs/: template-downloader.md
snippets/: vendor-data.yaml
src/: downloader.rs  installer.rs  main.rs  util.rs
